--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
 <h1> About Adrian </h1>
+<p>Greetings and consolations to you for visiting my page. My major interests are few, though I approach them with a very high degree of dedication. I enjoy playing various stringed instruments, such as lute, oud, guitar, mandolin, and banjo in the right(wrong?) mood. Additionally, I dedicate a significant amount of time to weightlifting, despite the inane conversations I'm forced to endure at the gym. My final major interest is shooting both guns and bows- preferably at static targets, though a great deal of my youth was spent shooting moving targets.</p>
+<h2>Work Experience</h2>
+<p>The vast majority of my work experience was gained as a submariner in the United States Navy. More specifically, I was what is called a Fire Control Technician. This, contrary to the speculations of the average interlocutor, has nothing to do with extinguishing infernos of any kind. In fact, firefighting duties and knowledge are required of all submariners. My actual duties involved what one could basically reduce to underwater hunting. I interfaced with Sonar Technicians to track everything that moved around us; the difference between my work and the work of a Sonar Tech was that I was also responsible for the weapons side of the house. I was the one to 'push the button' as my fellow sailors liked to gleefully say. I was required to know the majority of their job as well as all of mine, whereas they were required to be continuously vigilant and were ultimately responsible for maintaining an awareness of the surrounding acoustic picture.</p>
+<h3> </h3>
 <script src= "app.js"> </script>
 
   </body>
