added new branch

--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+<div id = mainPart>
 <h1> About Adrian </h1>
 <p>Greetings and consolations to you for visiting my page. My major interests are few, though I approach them with a very high degree of dedication. I enjoy playing various stringed instruments, such as lute, oud, guitar, mandolin, and banjo in the right(wrong?) mood. Additionally, I dedicate a significant amount of time to weightlifting, despite the inane conversations I'm forced to endure at the gym. My final major interest is shooting both guns and bows- preferably at static targets, though a great deal of my youth was spent shooting moving targets.</p>
 <h2>Work Experience</h2>
 <p>The vast majority of my work experience was gained as a submariner in the United States Navy. More specifically, I was what is called a Fire Control Technician. This, contrary to the speculations of the average interlocutor, has nothing to do with extinguishing infernos of any kind. In fact, firefighting duties and knowledge are required of all submariners. My actual duties involved what one could basically reduce to underwater hunting. I interfaced with Sonar Technicians to track everything that moved around us; the difference between my work and the work of a Sonar Tech was that I was also responsible for the weapons side of the house. I was the one to 'push the button' as my fellow sailors liked to gleefully say. I was required to know the majority of their job as well as all of mine, whereas they were required to be continuously vigilant and were ultimately responsible for maintaining an awareness of the surrounding acoustic picture.</p>
 <h2>Professional Aspirations </h2>
 <p>Ideally, I would like to find a way to merge my interest in foreign languages with coding languages. I've studied German and Russian fairly extensively, with Russian being my primary language of interest. As for what that could potentially entail, other than working as a programmer in Russia, I don't currently know, but I fully intend on exploring the possibilities. While I know that I could quite easily work as a military contractor servicing the equipment I formerly operated and earn a sizeable income, I would much rather take on new challenges. Not to mention the fact that I'd prefer to never set foot on a submarine again.  </p>
+</div>
+<div id= list>
 <h2> Education </h2>
 <ul>
   <li> Fire Control Technician "A-School"</li>
   <li> Security Reaction Force Training </li>
   <li> University of Washington: Bachelor's Degree in Slavic Languages and Literatures: Russian </li>
 </ul>
+</div>
+<div id= topTen
 <h2> My Top Ten Albums </h2>
 <ol>
 <li> Bathory- Hammerheart </li>
@@ -31,6 +36,7 @@
 <li> Estatic Fear- Somnium Obmutum </li>
 <li> Forest of Shadows- Eternal Autumn </li>
 </ol>
+</div>
 <script src= "app.js"> </script>
 
   </body>
